--- a/index.html
+++ b/index.html
@@ -76,107 +76,112 @@
                 </div>
             </div>
         </div>
-        <!-- Company 4 -->
+        <!-- Mojo Burger -->
         <div class="company-box">
-            <img src="company4.jpg" alt="Company 4" class="company-image">
+            <img src="logos/mojo_burger.jpg" alt="Company 4" class="company-image">
             <div class="company-info">
-                <h2>Company 4</h2>
+                <h2>Mojo Burger</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 4</h3>
-                        <p>Details about Company 4.</p>
+                        <h3>/h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+4" target="_blank">
-                                Location 4 📍
+                            <a href="https://www.google.com/maps/place/Mojo+Burger/@37.9565857,40.1681481,17z/data=!3m1!4b1!4m6!3m5!1s0x40751f86672052eb:0x42e2ed9b44b82233!8m2!3d37.9565857!4d40.170723!16s%2Fg%2F11mxx88ccf?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Mojo Burger 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 4</span>
+                        <span class="discount">%15</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 5 -->
+        <!-- Hewş Kültür Sanat -->
         <div class="company-box">
-            <img src="company5.jpg" alt="Company 5" class="company-image">
+            <img src="logos/hewş.jpg" alt="Company 5" class="company-image">
             <div class="company-info">
-                <h2>Company 5</h2>
+                <h2>Hewş Kültür Sanat</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 5</h3>
-                        <p>Details about Company 5.</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+5" target="_blank">
-                                Location 5 📍
+                            <a href="https://www.google.com/maps/place/Hewş+Cafe-Kahvaltı/@37.9125263,40.2317619,17z/data=!3m1!4b1!4m6!3m5!1s0x40752105ca443fd1:0xc05fbabeea484678!8m2!3d37.9125263!4d40.2343368!16s%2Fg%2F11r3s7qpfk?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Hewş Kültür Sanat 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 5</span>
+                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 6 -->
+        <!-- Silva Ozalit -->
         <div class="company-box">
-            <img src="company6.jpg" alt="Company 6" class="company-image">
+            <img src="logos/silva.jpg" alt="Company 6" class="company-image">
             <div class="company-info">
-                <h2>Company 6</h2>
+                <h2>Silva Ozalit</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 6</h3>
-                        <p>Details about Company 6.</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+6" target="_blank">
-                                Location 6 📍
+                            <a href="https://www.google.com/maps/place/Silva+Ozalit/@37.9189839,40.2289173,17z/data=!3m1!4b1!4m6!3m5!1s0x40752023344c80b9:0x7a74be73f72fd6e4!8m2!3d37.9189839!4d40.2314922!16s%2Fg%2F1yg6npx4q?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Silva Ozalit 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 6</span>
+                        <span class="discount">%5-25</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 7 -->
+        <!-- Kahvaltıcı Kadri -->
         <div class="company-box">
-            <img src="company7.jpg" alt="Company 7" class="company-image">
+            <img src="logos/kahvaltici_kadri.jpg" alt="Company 7" class="company-image">
             <div class="company-info">
-                <h2>Company 7</h2>
+                <h2>Kahvaltıcı Kadri</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 7</h3>
-                        <p>Details about Company 7.</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+7" target="_blank">
-                                Location 7 📍
+                            <a href="https://www.google.com/maps/place/MEŞHUR+KAHVALTICI+KADRİ/@37.912855,40.2346283,17z/data=!3m1!4b1!4m6!3m5!1s0x40752047f77afc67:0x2dde787a7ceb8e95!8m2!3d37.912855!4d40.2372032!16s%2Fg%2F1tgckspj?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Hasan Paşa Hanı 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 7</span>
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/Meşhur+Kahvaltıcı+Kadri+%26+Coffe/@37.946842,40.1781154,17z/data=!3m1!4b1!4m6!3m5!1s0x40751e36bbea0475:0x1024b0044732c750!8m2!3d37.946842!4d40.1806903!16s%2Fg%2F11c1n1v86q?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Diclekent 📍
+                            </a>
+                        </span>
+                        <span class="discount">%25</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 8 -->
+        <!-- Maydanoz Döner -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 8" class="company-image">
+            <img src="logos/maydanoz.jpg" alt="Company 8" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Maydanoz Döner</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <h3></h3>
+                        <p>Paket servislerde geçerli değildir</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Maydonoz+Döner+Sur+İçi/@37.9155933,40.2366306,17z/data=!3m1!4b1!4m6!3m5!1s0x407521bc8f45fe81:0xe61d366827422b36!8m2!3d37.9155933!4d40.2366306!16s%2Fg%2F11stzbz6ft?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Sur İçi 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
