--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
         <!-- Hybrid -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="logos/hybrid.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
                 <h2>Hybrid Gym</h2>
                 <div class="info-section">
@@ -362,7 +362,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p>.</p>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -400,7 +400,7 @@
         <div class="company-box">
             <img src="logos/sur_ciger.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Sur Ciğercisi Samet Usta</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
@@ -443,149 +443,132 @@
                 </div>
             </div>
         </div>
-        <!-- Company 21 -->
+        <!-- Maria'nın Yeri -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="logos/maria.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Maria'nın Yeri</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <h3></h3>
+                        <p>Cumartesi etkinlikleri hariçtir.</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Marianin+yeri/@37.9106194,40.2381878,17z/data=!3m1!4b1!4m6!3m5!1s0x407521c9fb4f9573:0xe9e4230639b0ceb6!8m2!3d37.9106194!4d40.2381878!16s%2Fg%2F11kr7h31gs?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Maria'nın Yeri📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 22 -->
+        <!-- Ekleristan -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="logos/ekleristan.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Ekleristan</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Fırat,+Ekleristan+Diyarbakır,+Mezopotamya+Blv+MER+Sitesi+No:26+BB+A2+Blok,+21070+Kayapınar%2FDiyarbakır/data=!4m2!3m1!1s0x40751f9f819ccdcd:0xb227f82d3a9f3d9a?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
+                                Ekleristan 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 23 -->
+        <!-- Diyar Tantuni -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="logos/diyar.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Diyar Tantuni</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <h3></h3>
+                        <p>Paket servislerde geçerli değildir.</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Diyar+Tantuni,+Medya+Mahallesi+Diclekent+Bulvarı+Fem-Sat+7+Apartmanı+Altı,+21000+Kayapınar%2FDiyarbakır/data=!4m2!3m1!1s0x40751f760909a31b:0xe62b21d3da26270b?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
+                                Diyar Tantuni 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 24 -->
+        <!-- Pizza 4 You -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="logos/pizza4you.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Pizza 4 You</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <h3></h3>
+                        <p>Paket servislerde geçerli değildir.</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Pizza+for+You+Diyarbakır/@37.9494392,40.1762822,17z/data=!3m1!4b1!4m6!3m5!1s0x40751f707e3b9cf5:0x9a56aee3709a3d2!8m2!3d37.9494392!4d40.1762822!16s%2Fg%2F11h1j1y0mf?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Diclekent 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%20</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 25 -->
+        <!-- Niyokki -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="logos/niyokki.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Niyokki</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <h3></h3>
+                        <p></p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Niyokki+Diyarbakır+Winstown+AVM/@37.9676937,40.1552088,17z/data=!3m1!4b1!4m6!3m5!1s0x40751d26f0f070f9:0x224c589f05c263ff!8m2!3d37.9676937!4d40.1552088!16s%2Fg%2F11y1jfb6s6?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Winstown AVM 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Company 26 -->
+        <!-- Yayın Ağacı -->
         <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
+            <img src="logos/yayinagaci.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Company 1</h2>
+                <h2>Yayın Ağacı</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
+                        <p>Kültür kitaplarında %30</p>
+                        <p>Hazırlık kitaplarında %40</p>
+                        <p>Kırtasiye ürünlerinde %30</p>
+                        <p>Hediyelik eşya ve elektronikte %30</p>
+                        <p>Hobi ve resim malzemelerinde %30</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
+                            <a href="https://www.google.com/maps/place/Yayın+Ağacı/@37.9558894,40.1701817,17z/data=!3m1!4b1!4m6!3m5!1s0x40751e17e6b0c79d:0xbf9bf8ab1f48712d!8m2!3d37.9558894!4d40.1701817!16s%2Fg%2F11f2wcs9yw?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Yayın Ağacı 📍
                             </a>
                         </span>
-                        <span class="discount">Discount 1</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Company 27 -->
-        <div class="company-box">
-            <img src="company1.jpg" alt="Company 1" class="company-image">
-            <div class="company-info">
-                <h2>Company 1</h2>
-                <div class="info-section">
-                    <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>Details about Company 1.</p>
-                    </div>
-                    <div class="location-discount">
-                        <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
-                            </a>
-                        </span>
-                        <span class="discount">Discount 1</span>
+                        <span class="discount">%30-40</span>
                     </div>
                 </div>
             </div>
