--- a/index.html
+++ b/index.html
@@ -291,6 +291,27 @@
                 </div>
             </div>
         </div>
+        <!-- Tostçu Dayım -->
+        <div class="company-box">
+            <img src="logos/tostcudayim.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Tostçu Dayım</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/Tostcuudayım/@37.921799,40.2188871,17z/data=!3m1!4b1!4m6!3m5!1s0x407521f271ba08d1:0xa255d1ea05e3959b!8m2!3d37.921799!4d40.221462!16s%2Fg%2F11t_k1k59n?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Tostçu Dayım 📍
+                            </a>
+                        </span>
+                        <span class="discount">%10</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Firuze Cafe -->
         <div class="company-box">
             <img src="logos/firuze.jpg" alt="Company 1" class="company-image">
@@ -298,8 +319,9 @@
                 <h2>Firuze Cafe</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
-                        <p>İçeceklerde %10, yemeklerde %5 indirim</p>
+                        <h3></h3>
+                        <p>İçeceklerde %10</p>
+                        <p>Yemeklerde %5</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -329,27 +351,6 @@
                             </a>
                         </span>
                         <span class="discount">%5-10</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Tostçu Dayım -->
-        <div class="company-box">
-            <img src="logos/tostcudayim.jpg" alt="Company 1" class="company-image">
-            <div class="company-info">
-                <h2>Tostçu Dayım</h2>
-                <div class="info-section">
-                    <div class="info-box">
-                        <h3></h3>
-                        <p></p>
-                    </div>
-                    <div class="location-discount">
-                        <span class="location">
-                            <a href="https://www.google.com/maps/place/Tostcuudayım/@37.921799,40.2188871,17z/data=!3m1!4b1!4m6!3m5!1s0x407521f271ba08d1:0xa255d1ea05e3959b!8m2!3d37.921799!4d40.221462!16s%2Fg%2F11t_k1k59n?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-                                Tostçu Dayım 📍
-                            </a>
-                        </span>
-                        <span class="discount">%10</span>
                     </div>
                 </div>
             </div>
@@ -451,7 +452,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p>Cumartesi etkinlikleri hariçtir.</p>
+                        <p>Cumartesi günü olan etkinlikler hariçtir.</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -555,7 +556,7 @@
                 <h2>Yayın Ağacı</h2>
                 <div class="info-section">
                     <div class="info-box">
-                        <h3>Info 1</h3>
+                        <h3></h3>
                         <p>Kültür kitaplarında %30</p>
                         <p>Hazırlık kitaplarında %40</p>
                         <p>Kırtasiye ürünlerinde %30</p>
