--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p>İçeceklerde %10, yemeklerde %5</p>
+                        <p>İçeceklerde %10</p>
+                        <p>Yemeklerde %5</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
